# university

geometry/: CMakeLists.txt  aplusb.cpp  area.cpp  diameter.cpp  distance.cpp  hull.cpp  inside.cpp  kislota.cpp  point.cpp  rendev2.cpp  rendezvous.cpp  square.cpp  tower.cpp  triangulation.cpp
