cmake_minimum_required(VERSION 3.15)
project(geometry)

set(CMAKE_CXX_STANDARD 14)

add_executable(diameter diameter.cpp)
add_executable(square square.cpp)
add_executable(tower tower.cpp)
add_executable(triangulation triangulation.cpp)
add_executable(rendezvous rendezvous.cpp)
add_executable(hull hull.cpp)
add_executable(inside inside.cpp)
add_executable(point point.cpp)
add_executable(area area.cpp)
add_executable(aplusb aplusb.cpp)
add_executable(rendev2 rendev2.cpp)
add_executable(kislota kislota.cpp)
add_executable(distance distance.cpp)


